--- a/cnd/config.json
+++ b/cnd/config.json
@@ -1,4 +1,4 @@
 {
-  "ocr_image_size": [16, 50],
-  "data_path": ""
+  "ocr_image_size": [32, 64],
+  "data_path": "/Users/alex/PycharmProjects/tips-tricks-project/CropNumbers/"
 }
